# vdb-bench

./: Dockerfile  README.md  docker-compose.yml  list_collections.py  milvus-cluster.yml  pyproject.toml  requirements.txt
app/vector_benchmark/: benchmark_runner.py
vdbbench/: compact_and_watch.py  config_loader.py  list_collections.py  load_vdb.py  simple_bench.py
vdbbench/configs/: 10m.yaml  10m_diskann.yaml  10m_hnsw.yaml  1m.yaml  1m_diskann.yaml  1m_hnsw.yaml
vdbbench/pgvector/: pgvector_bench.py  setup.md
vector_benchmark/: benchmark_runner.py  cli.py  database_connector.py  metrics_collector.py  query_workload.py  vector_generator.py
vector_benchmark/connectors/: milvus_connector.py  pinecone_connector.py  qdrant_connector.py
